// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - navbar dark renders correctly 1`] = `
<jest>
  <nav
    class="navbar navbar-expand-lg navbar-dark"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand"
        href="/example.html"
      >
        <div
          class="h5 ms-4-5 d-none d-lg-inline-block"
        >
          Navbar
        </div>
      </a>
      <button
        aria-controls="navbar"
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="navbar-toggler"
        data-bs-target="#navbar"
        data-bs-toggle="collapse"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbar"
      >
        <ul
          class="me-auto navbar-nav"
        >
          <li
            class="nav-item"
          >
            <div
              aria-labelledby="dropdown-megamenu"
              class="bcl-mega-menu"
              style="--bcl-mm-min-height: 300px;"
            >
              <button
                aria-expanded="false"
                autocomplete="off"
                class="dropdown-toggle nav-link btn btn-link btn-md"
                data-bs-auto-close="outside"
                data-bs-toggle="dropdown"
                id="dropdown-megamenu"
                type="button"
              >
                A link with dropdown
              </button>
              <div
                aria-labelledby="dropdown-megamenu"
                class="mega-menu-container dropdown-menu"
              >
                <div
                  class="container position-relative"
                >
                  <div
                    class="d-lg-none back-button-block"
                  >
                    <button
                      class="back-button btn btn-link btn-md"
                      type="button"
                    >
                      <svg
                        class="me-2-5 bi icon--fluid"
                      >
                        <use
                          xlink:href="/icons.svg#arrow-left"
                        />
                      </svg>
                      Back
                    </button>
                  </div>
                  <div
                    class="row h-100"
                  >
                    <div
                      class="col-md-12 col-xl-3"
                    >
                      <div
                        class="content-block"
                      >
                        <h4>
                          About the European Commission
                        </h4>
                        <p>
                          Description text, lorem ipsum dolor sit amet, consectetur adipiscing elit.
                        </p>
                        <p
                          class="m-0"
                        >
                          <a
                            class="content-link"
                            href="/example.html"
                          >
                            Discover more
                            <svg
                              class="ms-2-5 bi icon--s"
                            >
                              <use
                                xlink:href="/icons.svg#arrow-right"
                              />
                            </svg>
                          </a>
                        </p>
                      </div>
                    </div>
                    <div
                      class="col-md-12 col-xl-6 h-100"
                    >
                      <div
                        class="row h-100 g-0"
                      >
                        <div
                          class="col-12 col-lg-4 col-xl h-100 mt-lg-3 mt-xl-0"
                        >
                          <div
                            aria-orientation="vertical"
                            class="navigation-items"
                            role="tablist"
                          >
                            <a
                              aria-controls="mm-panel-dropdown-megamenu-0"
                              aria-selected="false"
                              class="tab-toggle no-chevron"
                              data-bs-target="#mm-panel-dropdown-megamenu-0"
                              data-bs-toggle="tab"
                              href="#"
                              id="mm-trigger-dropdown-megamenu-0"
                              role="tab"
                            >
                              Base Category Item
                              <svg
                                class="ms-2-5 bi icon--fluid"
                              >
                                <use
                                  xlink:href="/icons.svg#chevron-right"
                                />
                              </svg>
                            </a>
                            <a
                              href="/example.html"
                            >
                              Base Category Item
                            </a>
                            <a
                              aria-controls="mm-panel-dropdown-megamenu-2"
                              aria-selected="false"
                              class="tab-toggle no-chevron"
                              data-bs-target="#mm-panel-dropdown-megamenu-2"
                              data-bs-toggle="tab"
                              href="#"
                              id="mm-trigger-dropdown-megamenu-2"
                              role="tab"
                            >
                              Base Category Item
                              <svg
                                class="ms-2-5 bi icon--fluid"
                              >
                                <use
                                  xlink:href="/icons.svg#chevron-right"
                                />
                              </svg>
                            </a>
                            <a
                              href="/example.html"
                            >
                              Base Category Item
                            </a>
                            <a
                              href="/example.html"
                            >
                              Base Category Item
                            </a>
                            <a
                              href="/example.html"
                            >
                              Base Category Item
                            </a>
                          </div>
                        </div>
                        <div
                          class="col-12 col-lg-4 col-xl h-100 mt-lg-3 mt-xl-0"
                        >
                          <div
                            class="sub-navigation-items tab-content"
                          >
                            <div
                              aria-labelledby="mm-trigger-dropdown-megamenu-0"
                              class="tab-pane p-0"
                              id="mm-panel-dropdown-megamenu-0"
                              role="tabpanel"
                            >
                              <p
                                class="panel-title"
                              >
                                Base Category Item
                              </p>
                              <ul
                                class="list-unstyled m-0"
                              >
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                              </ul>
                            </div>
                            <div
                              aria-labelledby="mm-trigger-dropdown-megamenu-2"
                              class="tab-pane p-0"
                              id="mm-panel-dropdown-megamenu-2"
                              role="tabpanel"
                            >
                              <p
                                class="panel-title"
                              >
                                Base Category Item
                              </p>
                              <ul
                                class="list-unstyled m-0"
                              >
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                              </ul>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="#first"
            >
              I'm a link
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/example.html"
            >
              I'm a link 2
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/example.html"
            >
              I'm a link 3
            </a>
          </li>
          <li
            class="nav-item dropdown"
          >
            <button
              aria-expanded="false"
              autocomplete="off"
              class="dropdown-toggle btn btn-primary btn-md"
              data-bs-toggle="dropdown"
              id="dropdown-1"
              type="button"
            >
              Dropdown Toggle
            </button>
            <ul
              aria-labelledby="dropdown-1"
              class="dropdown-menu"
            >
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  I'm a link
                </a>
              </li>
              <li>
                <button
                  class="dropdown-item"
                  type="button"
                >
                  I'm a button
                </button>
              </li>
              <li>
                <hr
                  class="dropdown-divider"
                />
              </li>
              <li>
                <button
                  aria-disabled="true"
                  class="dropdown-item"
                  disabled="true"
                  type="button"
                >
                  I'm a disabled button
                </button>
              </li>
              <li>
                <button
                  class="dropdown-item active"
                  type="button"
                >
                  I'm a active button
                </button>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</jest>
`;

exports[`OE - navbar light renders correctly 1`] = `
<jest>
  <nav
    class="navbar navbar-expand-lg navbar-light"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand"
        href="/example.html"
      >
        <div
          class="h5 ms-4-5 d-none d-lg-inline-block"
        >
          Navbar
        </div>
      </a>
      <button
        aria-controls="navbar"
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="navbar-toggler"
        data-bs-target="#navbar"
        data-bs-toggle="collapse"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbar"
      >
        <ul
          class="me-auto navbar-nav"
        >
          <li
            class="nav-item"
          >
            <div
              aria-labelledby="dropdown-megamenu"
              class="bcl-mega-menu"
              style="--bcl-mm-min-height: 300px;"
            >
              <button
                aria-expanded="false"
                autocomplete="off"
                class="dropdown-toggle nav-link btn btn-link btn-md"
                data-bs-auto-close="outside"
                data-bs-toggle="dropdown"
                id="dropdown-megamenu"
                type="button"
              >
                A link with dropdown
              </button>
              <div
                aria-labelledby="dropdown-megamenu"
                class="mega-menu-container dropdown-menu"
              >
                <div
                  class="container position-relative"
                >
                  <div
                    class="d-lg-none back-button-block"
                  >
                    <button
                      class="back-button btn btn-link btn-md"
                      type="button"
                    >
                      <svg
                        class="me-2-5 bi icon--fluid"
                      >
                        <use
                          xlink:href="/icons.svg#arrow-left"
                        />
                      </svg>
                      Back
                    </button>
                  </div>
                  <div
                    class="row h-100"
                  >
                    <div
                      class="col-md-12 col-xl-3"
                    >
                      <div
                        class="content-block"
                      >
                        <h4>
                          About the European Commission
                        </h4>
                        <p>
                          Description text, lorem ipsum dolor sit amet, consectetur adipiscing elit.
                        </p>
                        <p
                          class="m-0"
                        >
                          <a
                            class="content-link"
                            href="/example.html"
                          >
                            Discover more
                            <svg
                              class="ms-2-5 bi icon--s"
                            >
                              <use
                                xlink:href="/icons.svg#arrow-right"
                              />
                            </svg>
                          </a>
                        </p>
                      </div>
                    </div>
                    <div
                      class="col-md-12 col-xl-6 h-100"
                    >
                      <div
                        class="row h-100 g-0"
                      >
                        <div
                          class="col-12 col-lg-4 col-xl h-100 mt-lg-3 mt-xl-0"
                        >
                          <div
                            aria-orientation="vertical"
                            class="navigation-items"
                            role="tablist"
                          >
                            <a
                              aria-controls="mm-panel-dropdown-megamenu-0"
                              aria-selected="false"
                              class="tab-toggle no-chevron"
                              data-bs-target="#mm-panel-dropdown-megamenu-0"
                              data-bs-toggle="tab"
                              href="#"
                              id="mm-trigger-dropdown-megamenu-0"
                              role="tab"
                            >
                              Base Category Item
                              <svg
                                class="ms-2-5 bi icon--fluid"
                              >
                                <use
                                  xlink:href="/icons.svg#chevron-right"
                                />
                              </svg>
                            </a>
                            <a
                              href="/example.html"
                            >
                              Base Category Item
                            </a>
                            <a
                              aria-controls="mm-panel-dropdown-megamenu-2"
                              aria-selected="false"
                              class="tab-toggle no-chevron"
                              data-bs-target="#mm-panel-dropdown-megamenu-2"
                              data-bs-toggle="tab"
                              href="#"
                              id="mm-trigger-dropdown-megamenu-2"
                              role="tab"
                            >
                              Base Category Item
                              <svg
                                class="ms-2-5 bi icon--fluid"
                              >
                                <use
                                  xlink:href="/icons.svg#chevron-right"
                                />
                              </svg>
                            </a>
                            <a
                              href="/example.html"
                            >
                              Base Category Item
                            </a>
                            <a
                              href="/example.html"
                            >
                              Base Category Item
                            </a>
                            <a
                              href="/example.html"
                            >
                              Base Category Item
                            </a>
                          </div>
                        </div>
                        <div
                          class="col-12 col-lg-4 col-xl h-100 mt-lg-3 mt-xl-0"
                        >
                          <div
                            class="sub-navigation-items tab-content"
                          >
                            <div
                              aria-labelledby="mm-trigger-dropdown-megamenu-0"
                              class="tab-pane p-0"
                              id="mm-panel-dropdown-megamenu-0"
                              role="tabpanel"
                            >
                              <p
                                class="panel-title"
                              >
                                Base Category Item
                              </p>
                              <ul
                                class="list-unstyled m-0"
                              >
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                              </ul>
                            </div>
                            <div
                              aria-labelledby="mm-trigger-dropdown-megamenu-2"
                              class="tab-pane p-0"
                              id="mm-panel-dropdown-megamenu-2"
                              role="tabpanel"
                            >
                              <p
                                class="panel-title"
                              >
                                Base Category Item
                              </p>
                              <ul
                                class="list-unstyled m-0"
                              >
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                              </ul>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="#first"
            >
              I'm a link
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/example.html"
            >
              I'm a link 2
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/example.html"
            >
              I'm a link 3
            </a>
          </li>
          <li
            class="nav-item dropdown"
          >
            <button
              aria-expanded="false"
              autocomplete="off"
              class="dropdown-toggle btn btn-primary btn-md"
              data-bs-toggle="dropdown"
              id="dropdown-1"
              type="button"
            >
              Dropdown Toggle
            </button>
            <ul
              aria-labelledby="dropdown-1"
              class="dropdown-menu"
            >
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  I'm a link
                </a>
              </li>
              <li>
                <button
                  class="dropdown-item"
                  type="button"
                >
                  I'm a button
                </button>
              </li>
              <li>
                <hr
                  class="dropdown-divider"
                />
              </li>
              <li>
                <button
                  aria-disabled="true"
                  class="dropdown-item"
                  disabled="true"
                  type="button"
                >
                  I'm a disabled button
                </button>
              </li>
              <li>
                <button
                  class="dropdown-item active"
                  type="button"
                >
                  I'm a active button
                </button>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</jest>
`;

exports[`OE - navbar renders correctly with disable collapse 1`] = `
<jest>
  <nav
    class="navbar navbar-expand-lg navbar-light"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand"
        href="/example.html"
      >
        <div
          class="h5 ms-4-5 d-none d-lg-inline-block"
        >
          Navbar
        </div>
      </a>
      <ul
        class="me-auto navbar-nav"
      >
        <li
          class="nav-item"
        >
          <div
            aria-labelledby="dropdown-megamenu"
            class="bcl-mega-menu"
            style="--bcl-mm-min-height: 300px;"
          >
            <button
              aria-expanded="false"
              autocomplete="off"
              class="dropdown-toggle nav-link btn btn-link btn-md"
              data-bs-auto-close="outside"
              data-bs-toggle="dropdown"
              id="dropdown-megamenu"
              type="button"
            >
              A link with dropdown
            </button>
            <div
              aria-labelledby="dropdown-megamenu"
              class="mega-menu-container dropdown-menu"
            >
              <div
                class="container position-relative"
              >
                <div
                  class="d-lg-none back-button-block"
                >
                  <button
                    class="back-button btn btn-link btn-md"
                    type="button"
                  >
                    <svg
                      class="me-2-5 bi icon--fluid"
                    >
                      <use
                        xlink:href="/icons.svg#arrow-left"
                      />
                    </svg>
                    Back
                  </button>
                </div>
                <div
                  class="row h-100"
                >
                  <div
                    class="col-md-12 col-xl-3"
                  >
                    <div
                      class="content-block"
                    >
                      <h4>
                        About the European Commission
                      </h4>
                      <p>
                        Description text, lorem ipsum dolor sit amet, consectetur adipiscing elit.
                      </p>
                      <p
                        class="m-0"
                      >
                        <a
                          class="content-link"
                          href="/example.html"
                        >
                          Discover more
                          <svg
                            class="ms-2-5 bi icon--s"
                          >
                            <use
                              xlink:href="/icons.svg#arrow-right"
                            />
                          </svg>
                        </a>
                      </p>
                    </div>
                  </div>
                  <div
                    class="col-md-12 col-xl-6 h-100"
                  >
                    <div
                      class="row h-100 g-0"
                    >
                      <div
                        class="col-12 col-lg-4 col-xl h-100 mt-lg-3 mt-xl-0"
                      >
                        <div
                          aria-orientation="vertical"
                          class="navigation-items"
                          role="tablist"
                        >
                          <a
                            aria-controls="mm-panel-dropdown-megamenu-0"
                            aria-selected="false"
                            class="tab-toggle no-chevron"
                            data-bs-target="#mm-panel-dropdown-megamenu-0"
                            data-bs-toggle="tab"
                            href="#"
                            id="mm-trigger-dropdown-megamenu-0"
                            role="tab"
                          >
                            Base Category Item
                            <svg
                              class="ms-2-5 bi icon--fluid"
                            >
                              <use
                                xlink:href="/icons.svg#chevron-right"
                              />
                            </svg>
                          </a>
                          <a
                            href="/example.html"
                          >
                            Base Category Item
                          </a>
                          <a
                            aria-controls="mm-panel-dropdown-megamenu-2"
                            aria-selected="false"
                            class="tab-toggle no-chevron"
                            data-bs-target="#mm-panel-dropdown-megamenu-2"
                            data-bs-toggle="tab"
                            href="#"
                            id="mm-trigger-dropdown-megamenu-2"
                            role="tab"
                          >
                            Base Category Item
                            <svg
                              class="ms-2-5 bi icon--fluid"
                            >
                              <use
                                xlink:href="/icons.svg#chevron-right"
                              />
                            </svg>
                          </a>
                          <a
                            href="/example.html"
                          >
                            Base Category Item
                          </a>
                          <a
                            href="/example.html"
                          >
                            Base Category Item
                          </a>
                          <a
                            href="/example.html"
                          >
                            Base Category Item
                          </a>
                        </div>
                      </div>
                      <div
                        class="col-12 col-lg-4 col-xl h-100 mt-lg-3 mt-xl-0"
                      >
                        <div
                          class="sub-navigation-items tab-content"
                        >
                          <div
                            aria-labelledby="mm-trigger-dropdown-megamenu-0"
                            class="tab-pane p-0"
                            id="mm-panel-dropdown-megamenu-0"
                            role="tabpanel"
                          >
                            <p
                              class="panel-title"
                            >
                              Base Category Item
                            </p>
                            <ul
                              class="list-unstyled m-0"
                            >
                              <li>
                                <a
                                  class=""
                                  href="/example.html"
                                >
                                  Base Sub Category Item
                                </a>
                              </li>
                              <li>
                                <a
                                  class=""
                                  href="/example.html"
                                >
                                  Base Sub Category Item
                                </a>
                              </li>
                              <li>
                                <a
                                  class=""
                                  href="/example.html"
                                >
                                  Base Sub Category Item
                                </a>
                              </li>
                              <li>
                                <a
                                  class=""
                                  href="/example.html"
                                >
                                  Base Sub Category Item
                                </a>
                              </li>
                              <li>
                                <a
                                  class=""
                                  href="/example.html"
                                >
                                  Base Sub Category Item
                                </a>
                              </li>
                            </ul>
                          </div>
                          <div
                            aria-labelledby="mm-trigger-dropdown-megamenu-2"
                            class="tab-pane p-0"
                            id="mm-panel-dropdown-megamenu-2"
                            role="tabpanel"
                          >
                            <p
                              class="panel-title"
                            >
                              Base Category Item
                            </p>
                            <ul
                              class="list-unstyled m-0"
                            >
                              <li>
                                <a
                                  class=""
                                  href="/example.html"
                                >
                                  Base Sub Category Item
                                </a>
                              </li>
                              <li>
                                <a
                                  class=""
                                  href="/example.html"
                                >
                                  Base Sub Category Item
                                </a>
                              </li>
                              <li>
                                <a
                                  class=""
                                  href="/example.html"
                                >
                                  Base Sub Category Item
                                </a>
                              </li>
                              <li>
                                <a
                                  class=""
                                  href="/example.html"
                                >
                                  Base Sub Category Item
                                </a>
                              </li>
                              <li>
                                <a
                                  class=""
                                  href="/example.html"
                                >
                                  Base Sub Category Item
                                </a>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="#first"
          >
            I'm a link
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/example.html"
          >
            I'm a link 2
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/example.html"
          >
            I'm a link 3
          </a>
        </li>
        <li
          class="nav-item dropdown"
        >
          <button
            aria-expanded="false"
            autocomplete="off"
            class="dropdown-toggle btn btn-primary btn-md"
            data-bs-toggle="dropdown"
            id="dropdown-1"
            type="button"
          >
            Dropdown Toggle
          </button>
          <ul
            aria-labelledby="dropdown-1"
            class="dropdown-menu"
          >
            <li>
              <a
                class="dropdown-item"
                href="/example.html"
              >
                I'm a link
              </a>
            </li>
            <li>
              <button
                class="dropdown-item"
                type="button"
              >
                I'm a button
              </button>
            </li>
            <li>
              <hr
                class="dropdown-divider"
              />
            </li>
            <li>
              <button
                aria-disabled="true"
                class="dropdown-item"
                disabled="true"
                type="button"
              >
                I'm a disabled button
              </button>
            </li>
            <li>
              <button
                class="dropdown-item active"
                type="button"
              >
                I'm a active button
              </button>
            </li>
          </ul>
        </li>
      </ul>
    </div>
  </nav>
</jest>
`;

exports[`OE - navbar renders correctly with expand small 1`] = `
<jest>
  <nav
    class="navbar navbar-expand-sm navbar-light"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand"
        href="/example.html"
      >
        <div
          class="h5 ms-4-5 d-none d-lg-inline-block"
        >
          Navbar
        </div>
      </a>
      <button
        aria-controls="navbar"
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="navbar-toggler"
        data-bs-target="#navbar"
        data-bs-toggle="collapse"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbar"
      >
        <ul
          class="me-auto navbar-nav"
        >
          <li
            class="nav-item"
          >
            <div
              aria-labelledby="dropdown-megamenu"
              class="bcl-mega-menu"
              style="--bcl-mm-min-height: 300px;"
            >
              <button
                aria-expanded="false"
                autocomplete="off"
                class="dropdown-toggle nav-link btn btn-link btn-md"
                data-bs-auto-close="outside"
                data-bs-toggle="dropdown"
                id="dropdown-megamenu"
                type="button"
              >
                A link with dropdown
              </button>
              <div
                aria-labelledby="dropdown-megamenu"
                class="mega-menu-container dropdown-menu"
              >
                <div
                  class="container position-relative"
                >
                  <div
                    class="d-lg-none back-button-block"
                  >
                    <button
                      class="back-button btn btn-link btn-md"
                      type="button"
                    >
                      <svg
                        class="me-2-5 bi icon--fluid"
                      >
                        <use
                          xlink:href="/icons.svg#arrow-left"
                        />
                      </svg>
                      Back
                    </button>
                  </div>
                  <div
                    class="row h-100"
                  >
                    <div
                      class="col-md-12 col-xl-3"
                    >
                      <div
                        class="content-block"
                      >
                        <h4>
                          About the European Commission
                        </h4>
                        <p>
                          Description text, lorem ipsum dolor sit amet, consectetur adipiscing elit.
                        </p>
                        <p
                          class="m-0"
                        >
                          <a
                            class="content-link"
                            href="/example.html"
                          >
                            Discover more
                            <svg
                              class="ms-2-5 bi icon--s"
                            >
                              <use
                                xlink:href="/icons.svg#arrow-right"
                              />
                            </svg>
                          </a>
                        </p>
                      </div>
                    </div>
                    <div
                      class="col-md-12 col-xl-6 h-100"
                    >
                      <div
                        class="row h-100 g-0"
                      >
                        <div
                          class="col-12 col-lg-4 col-xl h-100 mt-lg-3 mt-xl-0"
                        >
                          <div
                            aria-orientation="vertical"
                            class="navigation-items"
                            role="tablist"
                          >
                            <a
                              aria-controls="mm-panel-dropdown-megamenu-0"
                              aria-selected="false"
                              class="tab-toggle no-chevron"
                              data-bs-target="#mm-panel-dropdown-megamenu-0"
                              data-bs-toggle="tab"
                              href="#"
                              id="mm-trigger-dropdown-megamenu-0"
                              role="tab"
                            >
                              Base Category Item
                              <svg
                                class="ms-2-5 bi icon--fluid"
                              >
                                <use
                                  xlink:href="/icons.svg#chevron-right"
                                />
                              </svg>
                            </a>
                            <a
                              href="/example.html"
                            >
                              Base Category Item
                            </a>
                            <a
                              aria-controls="mm-panel-dropdown-megamenu-2"
                              aria-selected="false"
                              class="tab-toggle no-chevron"
                              data-bs-target="#mm-panel-dropdown-megamenu-2"
                              data-bs-toggle="tab"
                              href="#"
                              id="mm-trigger-dropdown-megamenu-2"
                              role="tab"
                            >
                              Base Category Item
                              <svg
                                class="ms-2-5 bi icon--fluid"
                              >
                                <use
                                  xlink:href="/icons.svg#chevron-right"
                                />
                              </svg>
                            </a>
                            <a
                              href="/example.html"
                            >
                              Base Category Item
                            </a>
                            <a
                              href="/example.html"
                            >
                              Base Category Item
                            </a>
                            <a
                              href="/example.html"
                            >
                              Base Category Item
                            </a>
                          </div>
                        </div>
                        <div
                          class="col-12 col-lg-4 col-xl h-100 mt-lg-3 mt-xl-0"
                        >
                          <div
                            class="sub-navigation-items tab-content"
                          >
                            <div
                              aria-labelledby="mm-trigger-dropdown-megamenu-0"
                              class="tab-pane p-0"
                              id="mm-panel-dropdown-megamenu-0"
                              role="tabpanel"
                            >
                              <p
                                class="panel-title"
                              >
                                Base Category Item
                              </p>
                              <ul
                                class="list-unstyled m-0"
                              >
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                              </ul>
                            </div>
                            <div
                              aria-labelledby="mm-trigger-dropdown-megamenu-2"
                              class="tab-pane p-0"
                              id="mm-panel-dropdown-megamenu-2"
                              role="tabpanel"
                            >
                              <p
                                class="panel-title"
                              >
                                Base Category Item
                              </p>
                              <ul
                                class="list-unstyled m-0"
                              >
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                                <li>
                                  <a
                                    class=""
                                    href="/example.html"
                                  >
                                    Base Sub Category Item
                                  </a>
                                </li>
                              </ul>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="#first"
            >
              I'm a link
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/example.html"
            >
              I'm a link 2
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/example.html"
            >
              I'm a link 3
            </a>
          </li>
          <li
            class="nav-item dropdown"
          >
            <button
              aria-expanded="false"
              autocomplete="off"
              class="dropdown-toggle btn btn-primary btn-md"
              data-bs-toggle="dropdown"
              id="dropdown-1"
              type="button"
            >
              Dropdown Toggle
            </button>
            <ul
              aria-labelledby="dropdown-1"
              class="dropdown-menu"
            >
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  I'm a link
                </a>
              </li>
              <li>
                <button
                  class="dropdown-item"
                  type="button"
                >
                  I'm a button
                </button>
              </li>
              <li>
                <hr
                  class="dropdown-divider"
                />
              </li>
              <li>
                <button
                  aria-disabled="true"
                  class="dropdown-item"
                  disabled="true"
                  type="button"
                >
                  I'm a disabled button
                </button>
              </li>
              <li>
                <button
                  class="dropdown-item active"
                  type="button"
                >
                  I'm a active button
                </button>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</jest>
`;
